--- a/src/main/resources/com/example/going_green/hello-view.fxml
+++ b/src/main/resources/com/example/going_green/hello-view.fxml
@@ -2,9 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.going_green.gameController"
+>
    <children>
       <Label layoutX="172.0" layoutY="14.0" prefHeight="29.0" prefWidth="263.0" text="Label" />
       <Button layoutX="87.0" layoutY="94.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="32.0" text="1" />
@@ -25,5 +28,11 @@
       <Button layoutX="393.0" layoutY="290.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="32.0" text="7" />
       <Button layoutX="449.0" layoutY="290.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="32.0" text="8" />
       <Button layoutX="505.0" layoutY="290.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="32.0" text="9" />
+      <ImageView fx:id="diceImage" fitHeight="90.0" fitWidth="90.0" layoutX="255.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/dice1.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="rollButton" layoutX="399.0" layoutY="210.0" mnemonicParsing="false" onAction="#roll" prefHeight="47.0" prefWidth="52.0" text="Roll" />
    </children>
 </AnchorPane>
